# raspberry_marych

./: blink-usb.c
TimesNewRoman/: CMakeLists.txt  TimesNewRoman.c  TimesNewRoman.h
blink/: CMakeLists.txt  blink.uf2
blink_usb/: CMakeLists.txt  blink-usb.uf2  malinka_blink_usb.py
bme_280/: CMakeLists.txt  bme280.py  bme280.txt  bme280_graph.py  bme280_spi.c  bme280_spi.uf2  reading_bme280.py
device/: CMakeLists.txt  device.c  device.uf2  text
hello_adc/: CMakeLists.txt  hello_adc.c  hello_adc.py  hello_adc.txt  hello_adc.uf2  hello_adc_graph.py
squares/: CMakeLists.txt  gradient.c  gradient.h  spi_led.c
